# seismos-backend-python

./: .env.example  .gitignore  Dockerfile  config.py  doc.txt  docker-compose.yaml  docker-compose.yaml.backup  dockerfile  entrypoint.sh  flasgger_marshmallow.py  improve.txt  note.txt  pyproject.toml  readme.md  restart.sh  single_store_witsml_schema_v4.sql  start_docker.sh  tox.ini  worker_db_backup.py  wsgi.py
.github/workflows/: python-app.yml
app/: __init__.py
app/controllers/: DataIngestionFunctions.py  __init__.py  backup_system.py
app/models/: __init__.py  backside_pressure.py  clean.py  client.py  coil_tubing.py  crew.py  customer_field_rep.py  daily_log.py  default_value.py  default_values.py  default_volumes.py  equipment.py  ff_parameter_set.py  fluid_type_lookup.py  formation.py  formation_top.py  geophysical_properties.py  job.py  job_info.py  location.py  mixin_models.py  nf_parameter_set.py  pad.py  project.py  pumpdown.py  qc_report.py  survey_report.py  tracking_sheet.py  user.py  utils.py  well.py
app/schemas/: __init__.py  auth.py  backup_db.py  base.py  daily_log.py  default_value.py  default_values.py  input_data.py  (+5 more)
singlestore_sql/: cloud_sync_table_list_data.sql  single_store_witsml_schema_v6-1_updated.sql  singlestore_seismos_schema_v6-61.sql  singlestore_seismos_schema_v6-62.sql  singlestore_seismos_schema_v6-63.sql  singlestore_seismos_schema_v6-64.sql  singlestore_seismos_schema_v6-65.sql  singlestore_seismos_schema_v6-66.sql  singlestore_seismos_schema_v6-70.sql
tests/: conftest.py  test_api.py  test_auth.py  test_db.py  utils.py
(+35 files in other folders)
