[tool.poetry]
name = "seismos"
version = "0.1.0"
description = ""
authors = ["nixissmtp <gleb@simple2b.(none)>"]

[tool.poetry.dependencies]
python = "^3.8"
flake8 = "^3.9.2"
black = "^21.6b0"
click = "^8.0.1"
Flask = "^2.0.1"
Flask-SQLAlchemy = "^2.5.1"
SQLAlchemy = "^1.4.20"
itsdangerous = "^2.0.1"
MarkupSafe = "^2.0.1"
pytest = "^6.2.4"
python-dotenv = "^0.18.0"
Werkzeug = "^2.0.1"
Flask-RESTful = "^0.3.9"
mysqlclient = "^2.0.3"
SQLAlchemy-Utils = "^0.37.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
